--- a/index.html.html
+++ b/index.html.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
-    
+    <div class="htmlContainer">
+    <h1> название сайта</h1>
+    <h2>HTML</h2>
+    <p>текст про <br>HTML</p>
+    <h2>CSS</h2>
+    <p>текст про CSS</p> 
+    </div>
+    <div class="CSSContainer">
+      <input type="text" volue="hgujiku">
+      <input type="button" volue="кнопка">
+    <ul>
+        <li> gkjugkuj </li>
+    </ul>
+   </div>
 </body>
 </html>
